Added new styles css and made changes to the schedule index

--- a/WebUI/Views/Contacts/Index.cshtml
+++ b/WebUI/Views/Contacts/Index.cshtml
@@ -1,29 +1,29 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<main>
-    <container>
-        <h1>Якщо у вас є запитання або вам потрібна додаткова інформація, будь ласка, зв'яжіться з нами за допомогою наведених нижче контактів.</h1>
+<main style="overflow: auto" class="main-body">
+    <div class="container">
+        <h1 style="font-size: 30px;text-align: center; margin: 0;">Якщо у вас є запитання або вам потрібна додаткова інформація, будь ласка, зв'яжіться з нами за допомогою наведених нижче контактів.</h1>
         <section>
-            <h2>Наші контакти</h2>
+            <h2 style="font-size: 30px;">Наші контакти</h2>
             <ul>
                 <li>
-                    <h3>Адреса:</h3>
+                    <h3 style="font-size: 24px;">Адреса:</h3>
                     <p>вул. Шевченка, 123, м. Київ, Україна</p>
                 </li>
                 <li>
-                    <h3>Телефон:</h3>
+                    <h3 style="font-size: 24px;" >Телефон:</h3>
                     <p>+38 (044) 123-45-67</p>
                 </li>
                 <li>
-                    <h3>Email:</h3>
+                    <h3 style="font-size: 24px;">Email:</h3>
                     <p>info@sofrcinema.com</p>
                 </li>
             </ul>
         </section>
         <section>
             <div class="menu-block">
-                <h2>Ми в соціальних мережах</h2>
+                <h2 style="font-size: 30px;">Ми в соціальних мережах</h2>
                 <div class="menu_soc">
                     <a class="menu_soc_item" href="" rel="nofollow" target="_blank">
                         <img src="UI/icons8-facebook.svg" alt="Facebook">
@@ -47,5 +47,5 @@
                 </div>
             </div>
         </section>
-    </container>
+    </div>
 </main>
