--- a/WebUI/Views/Schedule/Index.cshtml
+++ b/WebUI/Views/Schedule/Index.cshtml
@@ -13,7 +13,7 @@
                 <div class="title-box__title">Розклад сеансів</div>
                 
             </div>
-            <table cellspacing="0" cellpadding="0" class="schedule-table" style="position: relative; height: 2582.94px;">
+            <table cellspacing="0" cellpadding="0" class="schedule-table">
                 <tbody>
                 <tr class="schedule-table__row schedule-table__row_head category_14" style="position: static; left: 0px; top: 0px;">
                     <td class="schedule-table__col">@DateTime.Now.ToString("ddd, dd.MM.", new CultureInfo("uk-UA"))</td>
