--- a/WebUI/Views/Shared/Header.cshtml
+++ b/WebUI/Views/Shared/Header.cshtml
@@ -23,11 +23,13 @@
                 <a asp-action="Index"
                    asp-controller="About" class="main-nav_link">Про кінотеатр</a>
             </li>
-            <li class="current-page_yellow">
-                <a asp-action="Index"
-                   asp-controller="Login" class="current-page_yellow">Увійти</a>
-            </li>
         </ul>
     </nav>
+    <div class="login">
+        <li class="current-page_yellow">
+            <a asp-action="Index"
+               asp-controller="Login" class="current-page-black">Увійти</a>
+        </li>
+    </div>
 </header>
 
