--- a/WebUI/Views/Schedule/Index.cshtml
+++ b/WebUI/Views/Schedule/Index.cshtml
@@ -11,7 +11,32 @@
         <div class="container">
             <div class="title-box">
                 <div class="title-box__title">Розклад сеансів</div>
-                
+                <nav class="schedule">
+                    <ul class="schedule__list schedule__list_movie">
+                        <li class="schedule__item">
+                            <button type="button" class="schedule__btn schedule__btn_current" data-filter="*">Всі</button>
+                        </li>
+                        <li class="schedule__item">
+                            <button type="button" class="schedule__btn" data-filter=".date_16">Чт,  16.05</button>
+                        </li>
+                        <li class="schedule__item">
+                            <button type="button" class="schedule__btn" data-filter=".date_17">Пт,  17.05</button>
+                        </li>
+                        <li class="schedule__item">
+                            <button type="button" class="schedule__btn" data-filter=".date_18">Сб,  18.05</button>
+                        </li>
+                        <li class="schedule__item">
+                            <button type="button" class="schedule__btn" data-filter=".date_19">Нд,  19.05</button>
+                        </li>
+                        <li class="schedule__item">
+                            <button type="button" class="schedule__btn" data-filter=".date_20">Пн,  20.05</button>
+                        </li>
+                        <li class="schedule__item">
+                            <button type="button" class="schedule__btn" data-filter=".date_21">Вт,  21.05</button>
+                        </li>
+                    </ul>
+                    <a href="https://premiercity.com.ua/rozklad" class="schedule__btn schedule__btn_all">Весь розклад</a>
+                </nav>
             </div>
             <table cellspacing="0" cellpadding="0" class="schedule-table">
                 <tbody>
