--- a/WebUI/Views/Shared/Header.cshtml
+++ b/WebUI/Views/Shared/Header.cshtml
@@ -3,7 +3,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/head.js"> </script>
     <div class="logo">
-        <a asp-action="Index" asp-controller="Home"><img src="images/logoheader_3.png" alt="Auto Scout logoheader"></a>
+        <a asp-action="Index" asp-controller="Home"><img src="~/images/logoheader_3.png" alt="Auto Scout logoheader"></a>
     </div>
     <nav>
         <ul>
@@ -21,7 +21,7 @@
             </li>
             <li class="main-nav_item">
                 <a asp-action="Index"
-                   asp-controller="About" class="main-nav_link">Про нас</a>
+                   asp-controller="About" class="main-nav_link">Про кінотеатр</a>
             </li>
             <li class="current-page_yellow">
                 <a asp-action="Index"
