--- a/WebUI/wwwroot/css/style.css
+++ b/WebUI/wwwroot/css/style.css
@@ -1,20 +1,13 @@
+.site-title{
+  display: flex;
+  flex-direction: column;
+}
 /* Загальні стилі */
 body{
   font-family: Arial, sans-serif;
   background-color: #ffffff;
-  display: grid;
   place-content: start space-evenly;
-  height: 100vh;
-
-}
-.body-time{
-  opacity: 0; /* Початково приховуємо вміст сторінки */
-  transition: opacity 1s ease; /* Плавне з'явлення контенту */
-}
-main {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
+  height: 100svh;
 }
 .main-nav_link {
   font-family: Arial, sans-serif;
@@ -33,7 +26,7 @@ header.scrolled .main-nav_link {
 }
 .main-nav_link:hover
 {
-border-bottom-color: crimson;
+  border-bottom-color: crimson;
 }
 .main-nav_item{
   list-style: none;
@@ -72,11 +65,9 @@ border-bottom-color: crimson;
   color: orange;
 }
 .container {
-  width: 90%;
-  max-width: 1200px;
+  max-width: 95%; /* Змініть на більший відсоток або певне значення, щоб контент не стискався */
   margin: 0 auto;
 }
-
 /* Шапка сайту */
 header {
   background-color: transparent;
@@ -101,7 +92,6 @@ header img.logo {
   height: 50px;
   margin-right: 20px;
 }
-
 .logo {
   width: 200px;
 }
@@ -133,74 +123,17 @@ header nav a {
 
 /* Головна секція сайту */
 section {
-  display: block;
   margin-top: 80px;
   padding: 20px;
 }
 
 section h1 {
-  display: block;
   font-size: 32px;
   margin-top: 0;
 }
 
 section p {
-  display: block;
   font-size: 18px;
-  line-height: 1.5;
-}
-
-/* Медіазапити */
-@media screen and (max-width: 768px) 
-{
-  header {
-    flex-wrap: wrap;
-    padding: 10px;
-  }
-
-  header img.logo {
-    margin-right: 0;
-    margin-bottom: 10px;
-  }
-
-  header nav {
-    margin-top: 10px;
-    width: 100%;
-  }
-
-  header nav ul {
-    justify-content: space-between;
-    margin: 0;
-    padding: 0;
-  }
-
-  header nav li {
-    margin-left: 0;
-  }
-
-  header nav a {
-    font-size: 14px;
-  }
-}
-
-/* Main */
-main {
-  margin: 50px;
-}
-
-/* Contact Info */
-.contact-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.contact-info img {
-  max-width: 200px;
-}
-
-.contact-info p {
-  font-size: 20px;
   line-height: 1.5;
 }
 nav a:hover {
@@ -224,7 +157,6 @@ h2 {
   font-size: 24px;
   margin: 0;
   padding-bottom: 20px;
-  border-bottom: 1px solid #ccc;
 }
 
 ul {
@@ -254,11 +186,6 @@ a {
   text-decoration: none;
   font-weight: bold;
 }
-
-/*a:hover {
-  text-decoration: underline;
-}*/
-
 .site-footer {
   background-color: #0e0e0e;
   padding-bottom: 55px;
@@ -269,6 +196,7 @@ footer {
   unicode-bidi: isolate;
 }
 footer {
+  margin-top: 20px ;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -299,23 +227,18 @@ footer {
 .footer-right a:hover {
   color: #000;
 }
-
-body {
-  overflow: hidden;
-}
 .sprite {
   position: fixed;
   position: absolute;
   left: 50%;
-}
-.sprite {
-  position: fixed;
   top: 50%;
   transform: translate(-50%, -50%);
+  display: none;
 }
 .scroll-container {
   height: 100vh; /* Висота елемента відповідає висоті вікна браузера */
   overflow-y: scroll; /* Дозволяє вертикальну прокрутку, якщо контент виходить за межі */
+  display: none; /* Ховаємо спрайт на всіх сторінках за замовчуванням */
 }
 .scroll-to-top {
   position: fixed;
@@ -338,27 +261,6 @@ body {
 .scroll-to-top:hover {
   background-color: #555;
 }
-#myBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  background-color: transparent;
-  color: #ffffff;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 50%;
-  transition: background-color 0.3s ease-in-out;
-}
-
-#myBtn:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
 /*Стиль кнопки вверх*/
 .back-to-top{
   position: fixed;
@@ -389,22 +291,357 @@ body {
 
 .back-to-top::before{
   width: 60px;
-    height: 60px;
-    border-top: 10px solid #000000;
-    border-right: 10px solid #000000;
-    margin-right: 60px;
-    transform: rotate(-45deg);
+  height: 60px;
+  border-top: 10px solid #000000;
+  border-right: 10px solid #000000;
+  margin-right: 60px;
+  transform: rotate(-45deg);
 }
 
 .back-to-top::after {
   width: 60px;
-    height: 60px;
-    border-top: 10px solid #000000;
-    border-right: 10px solid #000000;
-    margin-right: 60px;
-    transform: rotate(-45deg);
+  height: 60px;
+  border-top: 10px solid #000000;
+  border-right: 10px solid #000000;
+  margin-right: 60px;
+  transform: rotate(-45deg);
+}
+/* Стилі для форми */
+.bootstrap-form {
+  /* Додайте класи Bootstrap тільки для елементів в межах цього контейнера */
+  margin-bottom: 20px;
+}
+element.style {
+  position: relative;
+  height: 1221.77px;
+}
+.movies-hire {
+  margin: 0 10px 73px 10px;
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 24%));
+  gap: 15px;
+}
+.section {
+  position: relative;
 }
 
+section {
+  display: block;
+  unicode-bidi: isolate;
+}
+.container {
+  max-width: 1150px;
+  margin: 0 auto;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.container_cabinet {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+/*-------------------------------------------------------------------
+    Title box
+-------------------------------------------------------------------*/
+.title-box {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 57px;
+}
+
+.title-box__title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.title-box__title_invert {
+  color: #312204;
+}
+
+/*-------------------------------------------------------------------
+    Movies
+-------------------------------------------------------------------*/
+/*Hire*/
+.movies-hire {
+  margin: 0 -10px;
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(50px, 24%));
+  gap: 15px;
+}
+
+.movie-hire {
+  margin: 0 10px 73px 10px;
+}
+
+.movie-hire:focus {
+  outline: none;
+}
+
+.movie-hire__img-wrap {
+  position: relative;
+  height: 450px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 17px;
+}
+
+.movie-hire__img-wrap:after {
+  content: '';
+  position: absolute;
+  bottom: -15px;
+  right: 30px;
+  left: 30px;
+  margin: 0 auto;
+  height: 160px;
+  -webkit-border-radius: 30px;
+  border-radius: 30px;
+  background-color: #000;
+  z-index: -1;
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
+}
+
+.movie-hire__img-wrap:hover .movie-hire__icons {
+  max-width: 147px;
+}
+
+.movie-hire__img-wrap:hover .movie-hire__icon {
+  opacity: 1;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+}
+.movie-hire__icons {
+  max-width: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+  -webkit-transition: max-width .3s;
+  -o-transition: max-width .3s;
+  transition: max-width .3s;
+}
+.movie-hire__icon {
+  position: relative;
+  width: 64px;
+  height: 64px;
+  -webkit-border-radius: 100%;
+  border-radius: 100%;
+  background-color: rgba(255, 242, 211, 0.66);
+  opacity: 0;
+  -webkit-transition: .25s;
+  -o-transition: .25s;
+  transition: .25s;
+}
+.movie-hire__icon:before, .movie-hire__icon:after {
+  content: '';
+  background-image: url("../images/spritesheet.png");
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 50%;
+  margin: 0 auto;
+  -webkit-transition: opacity .3s;
+  -o-transition: opacity .3s;
+  transition: opacity .3s;
+}
+
+.movie-hire__icon:after {
+  opacity: 0;
+}
+
+.movie-hire__icon:hover {
+  background-color: #5aa900;
+}
+
+.movie-hire__icon:hover:before {
+  opacity: 1;
+}
+
+.movie-hire__icon:hover:after {
+  opacity: 1;
+}
+
+.movie-hire__icon_ticket:before {
+  background-position: -29px 0px;
+  width: 29px;
+  height: 27px;
+  margin-top: -13.5px;
+}
+
+.movie-hire__icon_ticket:after {
+  background-position: 0px 0px;
+  width: 29px;
+  height: 27px;
+  margin-top: -13.5px;
+}
+
+.movie-hire__icon_play:before {
+  background-position: 0px -48px;
+  width: 19px;
+  height: 22px;
+  margin-top: -11px;
+}
+
+.movie-hire__icon_play:after {
+  background-position: -58px -21px;
+  width: 19px;
+  height: 22px;
+  margin-top: -11px;
+}
+.movie-hire__title {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.2;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+  -webkit-align-items: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline;
+  margin-bottom: 14px;
+}
+.movie-hire__tags {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+
+.movie-hire__tag {
+  padding: 3px 7px;
+  margin: 0 7px 7px 0;
+  font-size: 12px;
+  line-height: 1;
+  border: 1px solid #000000;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  color: #000000;
+}
+.movie-hire__img-wrap {
+  position: relative;
+  height: 450px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 17px;
+}
+
+.movie-hire__img-wrap:after {
+  content: '';
+  position: absolute;
+  bottom: -15px;
+  right: 30px;
+  left: 30px;
+  margin: 0 auto;
+  height: 160px;
+  -webkit-border-radius: 30px;
+  border-radius: 30px;
+  background-color: #000;
+  z-index: -1;
+  -webkit-filter: blur(10px);
+  filter: blur(10px);
+}
+
+.movie-hire__img-wrap:hover .movie-hire__icons {
+  max-width: 147px;
+}
+
+.movie-hire__img-wrap:hover .movie-hire__icon {
+  opacity: 1;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s;
+}
+
+.movie-hire__img {
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+a {
+  text-decoration: none;
+  color: #000000;
+  -webkit-transition: color .3s;
+  -o-transition: color .3s;
+  transition: color .3s;
+}
+
+a:hover {
+  color: #5aa900;
+}
+
+a:focus {
+  outline: none;
+}
+.movie-coming-soon__time {
+  background-color: rgba(255, 242, 211, 0.67);
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 1.79;
+  color: #312204;
+  padding: 0 12px;
+}
+.form-container {
+  width: 400px;
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 100px; /* Відступ зверху, щоб форма була посередині сторінки */
+  margin-left: 850px;
+}
 .menu-block {
   display: flex; /* Встановлюємо контейнер блоку як flex */
   justify-content: space-around; /* Розміщуємо дочірні елементи з рівною відстанню між ними */
@@ -420,28 +657,96 @@ body {
 .menu_soc_item {
   margin: 0 10px; /* Відстань між елементами */
 }
-
-.form-container {
-  width: 400px;
-  padding: 20px;
-  border-radius: 8px;
-  background-color: #ffffff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-top: 50px; /* Відступ зверху, щоб форма була посередині сторінки */
-  margin-left: 125px;
+/*-------------------------------------------------------------------
+    Schedule table
+-------------------------------------------------------------------*/
+.schedule-table {
+  width: 100%;
 }
 
-/* Стилі для форми */
-.bootstrap-form {
-  /* Додайте класи Bootstrap тільки для елементів в межах цього контейнера */
-  margin-bottom: 20px;
+.schedule-table__row {
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: 500;
+  -webkit-transition: background-color .3s;
+  -o-transition: background-color .3s;
+  transition: background-color .3s;
+  transform: none !important;
 }
 
-element.style {
+.schedule-table__row:hover {
+  background-color: rgba(146, 146, 146, 0.55);
+}
+
+.schedule-table__row_head {
+  background-color: rgba(146, 146, 146, 0.55);
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.schedule-table__row_head .schedule-table__col {
+  border-bottom-color: #d9c010;
+  border-right-color: #d9c010;
+}
+
+.schedule-table__row_head .schedule-table__col:nth-child(2) {
+  text-align: center;
+}
+
+.schedule-table__col {
+  border-bottom: 1px solid rgba(130, 130, 131, 0.25);
+  border-right: 1px solid rgba(130, 130, 131, 0.25);
+  text-align: center;
+  padding: 18px 5px;
   position: relative;
-  height: 1221.77px;
-}
-.movies-hire {
-  margin: 0 -10px;
 }
 
+.schedule-table__col:nth-child(1) {
+  padding: 0 5px;
+  width: 172px;
+}
+
+.schedule-table__col:nth-child(2) {
+  text-align: left;
+  padding-right: 30px;
+  padding-left: 30px;
+}
+
+.schedule-table__col:nth-child(3) {
+  width: 95px;
+}
+
+.schedule-table__col:nth-child(4) {
+  width: 118px;
+}
+
+.schedule-table__col:last-child {
+  width: 163px;
+  border-right: none;
+  padding: 0;
+}
+
+.schedule-table__btn {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  top: 0;
+  color: #5aa900;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 0 10px;
+  border: none;
+  background-color: transparent;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+}
+
+.schedule-table__btn:hover {
+  -webkit-box-shadow: inset 0 0 0 1px #d9c010;
+  box-shadow: inset 0 0 0 1px #d9c010;
+  background-color: #5aa900;
+  color: #fff;
+}
