--- a/WebUI/Views/Login/Index.cshtml
+++ b/WebUI/Views/Login/Index.cshtml
@@ -1,26 +1,36 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-<main style="overflow: auto" class="main-body">
-	<section id="Login">
-		<div class="form-container">
-			<h2 class="mb-4">Login</h2>
-			<form id="loginForm" class="bootstrap-form">
-				<div class="mb-3">
-					<label for="loginEmail" class="form-label">Email address</label>
-					<input type="email" class="form-control" id="loginEmail" name="loginEmail" required>
-				</div>
-				<div class="mb-3">
-					<label for="loginPassword" class="form-label">Password</label>
-					<input type="password" class="form-control" id="loginPassword" name="loginPassword" required>
-				</div>
-				<button type="submit" class="btn btn-primary">Login</button>
-				<p class="mt-3 mb-0">New user? <a asp-action="Index"
-                   asp-controller="Register">Register here</a></p>
-			</form>
+﻿@model Core.Models.User.LoginViewModel
 
-			<hr class="my-4">
-		</div>
-	</section>
+@{
+    ViewData["Title"] = "Login";
+}
+
+<main style="overflow: auto" class="main-body">
+    <section id="Login">
+        <div class="form-container">
+            <h2 class="mb-4">Login</h2>
+            <form class="bootstrap-form" method="post" asp-controller="Login" asp-action="Index" asp-route-returnUrl="@Model.ReturnUrl">
+                >
+                <div class="mb-3">
+                    <label class="form-label" asp-for="Email">Email</label>
+                    <input class="form-control" required asp-for="Email">
+                    <span asp-validation-for="Email"></span>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" asp-for="Password">Пароль</label>
+                    <input class="form-control" required asp-for="Password">
+                    <span asp-validation-for="Password"></span>
+                </div>
+                <button type="submit" class="btn btn-success">Увійти</button>
+                <p class="mt-3 mb-0">
+                    New user?
+                    <a asp-action="Index"
+                       asp-controller="Register">
+                        Register here
+                    </a>
+                </p>
+            </form>
+            <hr class="my-4">
+        </div>
+    </section>
 
 </main>
