--- a/WebUI/Views/Admin/Movies.cshtml
+++ b/WebUI/Views/Admin/Movies.cshtml
@@ -1,5 +1,4 @@
-@using Core.Models.Movie
-@model List<Movie>
+@model List<Core.Models.Movie.Movie>
 @{
     ViewData["Title"] = "Movies";
 }
@@ -11,7 +10,6 @@
         <div class="flex items-center mb-4 mx-auto items-center justify-between">
             <div class="flex items-center space-x-4 ml-2">
                 <form class="pr-3" action="" method="GET">
-                    <label for="movie-search" class="sr-only">Search</label>
                     <div class="relative w-48 mt-1 sm:w-64 xl:w-96">
                         <input type="text" name="search" id="movie-search"
                             class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
@@ -52,175 +50,188 @@
     </div>
     <table class="">
         <thead class="bg-gray-100">
-        <tr>
-            <th scope="col" class="p-4">
-                <div class="flex items-center">
-                    <input id="checkbox-all" type="checkbox" class="w-4 h-4 border-gray-300 rounded bg-gray-50">
-                    <label for="checkbox-all" class="sr-only">checkbox</label>
-                </div>
-            </th>
-            <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
-                ID
-            </th>
-            <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
-                Movie Title
-            </th>
-            <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
-                Genres
-            </th>
-            <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
-                Image
-            </th>
-            <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
-                Trailer
-            </th>
-            <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
-                Age Restrictions
-            </th>
-            <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
-                Duration
-            </th>
-            <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
-                Actors
-            </th>
-            <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
-                Raiting
-            </th>
-            <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
-                Description
-            </th>
-        </tr>
+            <tr>
+                <th scope="col" class="p-4">
+                    <div class="flex items-center">
+                        <input id="checkbox-all" type="checkbox" class="w-4 h-4 border-gray-300 rounded bg-gray-50">
+                        <label for="checkbox-all" class="sr-only">checkbox</label>
+                    </div>
+                </th>
+                <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
+                    ID
+                </th>
+                <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
+                    Movie Title
+                </th>
+                <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
+                    Genres
+                </th>
+                <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
+                    Image
+                </th>
+                <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
+                    Trailer
+                </th>
+                <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
+                    Age Restrictions
+                </th>
+                <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
+                    Duration
+                </th>
+                <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
+                    Actors
+                </th>
+                <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
+                    Raiting
+                </th>
+                <th scope="col" class="p-4 text-xs font-medium text-left text-gray-500 uppercase">
+                    Description
+                </th>
+            </tr>
         </thead>
         <tbody class="bg-white divide-y divide-gray-200">
-        @foreach (var movie in Model)
-        {
-            <tr>
-                <td class="w-4 p-4">
-                    <div class="flex items-center">
-                        <input id="checkbox-@movie.Id" type="checkbox"
-                               class="w-4 h-4 border-gray-300 rounded bg-gray-50">
-                        <label for="checkbox-@movie.Id" class="sr-only">checkbox</label>
-                    </div>
-                </td>
-                <td class="p-4 text-sm font-normal text-gray-500">
-                    @movie.Id</td>
-                <td id="search-this" class="p-4 text-sm font-normal text-gray-500">
-                    @movie.Name</td>
-                <td class="p-4 font-normal text-gray-500">
-                    @foreach (var genre in movie.Genres)
-                    {
-                        <p class="text-sm">@genre.Name, </p>
-                    }
-                </td>
-                <td class="p-4 font-medium text-gray-900">
-                    <img src='@movie.ImageUrl' />
-                </td>
-                <td class="p-4 font-medium text-gray-900">
-                    <iframe src="@movie.TrailerUrl" title="YouTube video player" frameborder="0"
+            @foreach (var movie in Model)
+            {
+                <tr id="output">
+                    <td class="w-4 p-4">
+                        <div class="flex items-center">
+                            <input id="checkbox-@movie.Id" type="checkbox"
+                                class="w-4 h-4 border-gray-300 rounded bg-gray-50">
+                            <label for="checkbox-@movie.Id" class="sr-only">checkbox</label>
+                        </div>
+                    </td>
+                    <td class="p-4 text-sm font-normal text-gray-500">
+                        @movie.Id</td>
+                    <td id="search-this" class="p-4 text-sm font-normal text-gray-500">
+                        @movie.Name</td>
+                    <td class="p-4 font-normal text-gray-500">
+                        @foreach (var genre in movie.Genres)
+                        {
+                            <p class="text-sm">@genre.Name, </p>
+                        }
+                    </td>
+                    <td class="p-4 font-medium text-gray-900">
+                        <img src='@movie.ImageUrl' />
+                    </td>
+                    <td class="p-4 font-medium text-gray-900">
+                        <iframe src="@movie.TrailerUrl" title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </td>
-                <td class="p-4 font-medium text-gray-900">
-                    @movie.AgeRestriction+</td>
-                <td class="p-4 font-normal text-gray-500">
-                    @movie.Duration хв</td>
-                <td class="p-4 font-normal text-gray-500">
-                    @foreach (var actor in movie.Actors)
-                    {
-                        <p class="text-sm">@actor.Name @actor.Surname, </p>
-                    }
-                </td>
-                <td class="p-4 font-normal text-gray-500">
-                    @movie.Rating/10</td>
-                <td class="h-10 p-4 font-normal text-gray-500" id="movieDescription">
-                    @((movie.Description.Length > 60) ? movie.Description.Substring(0, 60) : movie.Description)...</td>
-                <td class="p-4 space-x-2 whitespace-nowrap">
-                    <button type="button" class="drawer-edit-movie-toggle bg-yellow-400 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
-                        <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20"
-                             xmlns="http://www.w3.org/2000/svg">
-                            <path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z">
-                            </path>
-                            <path fill-rule="evenodd"
-                                  d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"
-                                  clip-rule="evenodd"></path>
-                        </svg>
-                        Update
-                    </button>
-                    <button type="button" class="drawer-delete-movie-toggle inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white
+                    </td>
+                    <td class="p-4 font-medium text-gray-900">
+                        @movie.AgeRestriction+</td>
+                    <td class="p-4 font-normal text-gray-500">
+                        @movie.Duration хв</td>
+                    <td class="p-4 font-normal text-gray-500">
+                        @foreach (var actor in movie.Actors)
+                        {
+                            <p class="text-sm">@actor.Name @actor.Surname, </p>
+                        }
+                    </td>
+                    <td class="p-4 font-normal text-gray-500">
+                        @movie.Rating/10</td>
+                    <td class="h-10 p-4 font-normal text-gray-500" id="movieDescription">
+                        @((movie.Description.Length > 60) ? movie.Description.Substring(0, 60) : movie.Description)...</td>
+                    <td class="p-4 space-x-2 whitespace-nowrap">
+                        <button type="button"
+                            class="drawer-edit-movie-toggle bg-yellow-400 inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+                            <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z">
+                                </path>
+                                <path fill-rule="evenodd"
+                                    d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"
+                                    clip-rule="evenodd"></path>
+                            </svg>
+                            Update
+                        </button>
+                        <button type="button" class="drawer-delete-movie-toggle inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white
                                     bg-red-600 rounded-lg hover:bg-red-800 focus:ring-4 focus:ring-red-300
                                     dark:focus:ring-red-900">
-                        <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20"
-                             xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd"
-                                  d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
-                                  clip-rule="evenodd"></path>
-                        </svg>
-                        Delete item
-                    </button>
-                </td>
-            </tr>
-        }
+                            <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd"
+                                    d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
+                                    clip-rule="evenodd"></path>
+                            </svg>
+                            Delete item
+                        </button>
+                    </td>
+                </tr>
+            }
         </tbody>
     </table>
     <div id="addMovieDrawerContainer"
-         class="hidden fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 overflow-y-auto transition-transform translate-x-full bg-white dark:bg-gray-800"
-         tabindex="-1" aria-labelledby="drawer-label" aria-hidden="true">
+        class="hidden fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 overflow-y-auto transition-transform translate-x-full bg-white dark:bg-gray-800"
+        tabindex="-1" aria-labelledby="drawer-label" aria-hidden="true">
         @{
-        var addMoviePartial = Html.Partial("AddMovie");
+            var addMoviePartial = Html.Partial("AddMovie");
         }
         @addMoviePartial
     </div>
     <div id="deleteMovieDrawerContainer"
-         class="hidden fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 overflow-y-auto transition-transform translate-x-full bg-white dark:bg-gray-800"
-         tabindex="-1" aria-labelledby="drawer-label" aria-hidden="true">
+        class="hidden fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 overflow-y-auto transition-transform translate-x-full bg-white dark:bg-gray-800"
+        tabindex="-1" aria-labelledby="drawer-label" aria-hidden="true">
         @{
             var deleteMoviePartial = Html.Partial("DeleteMovie");
         }
         @deleteMoviePartial
     </div>
     <div id="editMovieDrawerContainer"
-         class="hidden fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 overflow-y-auto transition-transform translate-x-full bg-white dark:bg-gray-800"
-         tabindex="-1" aria-labelledby="drawer-label" aria-hidden="true">
+        class="hidden fixed top-0 right-0 z-40 w-full h-screen max-w-xs p-4 overflow-y-auto transition-transform translate-x-full bg-white dark:bg-gray-800"
+        tabindex="-1" aria-labelledby="drawer-label" aria-hidden="true">
         @{
-        var editMoviePartial = Html.Partial("EditMovie");
+            var editMoviePartial = Html.Partial("EditMovie");
         }
         @editMoviePartial
     </div>
 </main>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const searchInput = document.getElementById("movie-search");
+        const rows = document.querySelectorAll("#output");
+        console.log(searchInput);
+
+        searchInput.addEventListener("input", function (e) {
+            const searchTerm = e.target.value.trim().toLowerCase();
+
+            rows.forEach(row => {
+                const movieTitle = row.querySelector("#search-this").textContent.toLowerCase();
+                console.log(movieTitle); // Check the value of movieTitle
+
+                if (movieTitle.includes(searchTerm)) {
+                    row.style.display = "table-row";
+                } else {
+                    row.style.display = "none";
+                }
+            });
+        });
+    });
     $(document).ready(function () {
         $('#drawer-create-movie-toggle').click(function () {
             $('#addMovieDrawerContainer').toggleClass('hidden');
         });
-    
+
         $('#drawer-create-movie-close').click(function () {
             $('#addMovieDrawerContainer').toggleClass('hidden');
         });
     });
     $(document).ready(function () {
-        // Button click event handler
         $('.drawer-delete-movie-toggle').click(function () {
-            // Toggle the visibility of the AddMovie drawer container
             $('#deleteMovieDrawerContainer').toggleClass('hidden');
         });
 
-        // Close button click event handler
         $('#drawer-delete-movie-close').click(function () {
-            // Hide the AddMovie drawer container
             $('#deleteMovieDrawerContainer').toggleClass('hidden');
         });
     });
     $(document).ready(function () {
-        // Button click event handler
         $('.drawer-edit-movie-toggle').click(function () {
-            // Toggle the visibility of the AddMovie drawer container
             $('#editMovieDrawerContainer').toggleClass('hidden');
         });
 
-        // Close button click event handler
         $('#drawer-edit-movie-close').click(function () {
-            // Hide the AddMovie drawer container
             $('#editMovieDrawerContainer').toggleClass('hidden');
         });
     });
