--- a/WebUI/Views/Schedule/Index.cshtml
+++ b/WebUI/Views/Schedule/Index.cshtml
@@ -35,7 +35,7 @@
                             <button type="button" class="schedule__btn" data-filter=".date_21">Вт,  21.05</button>
                         </li>
                     </ul>
-                    <a href="https://premiercity.com.ua/rozklad" class="schedule__btn schedule__btn_all">Весь розклад</a>
+                    <a asp-action="Index" asp-controller="Schedule" class="schedule__btn schedule__btn_all">Весь розклад</a>
                 </nav>
             </div>
             <table cellspacing="0" cellpadding="0" class="schedule-table">
