--- a/WebUI/Views/Shared/SessionRow.cshtml
+++ b/WebUI/Views/Shared/SessionRow.cshtml
@@ -12,7 +12,7 @@
     <td class="schedule-table__col">@Model.Hall.Name</td>
     <td class="schedule-table__col schedule-table__col_format">2D</td>
     <td class="schedule-table__col">
-        <a href="" class="schedule-hall vkino­link" id="90391" target="_top">
+        <a asp-controller="Ticket" asp-action="Index" asp-route-sessionId="@Model.Id" class="schedule-hall vkino­link" id="90391" target="_top">
             <button type="button" id="90391" class="schedule-table__btn">Купити</button>
         </a>
     </td>
