--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <title>SoftCinema</title>
     <link rel="shortcut icon" type="image/png" href="~/images/favicon.png"/>
     <link rel="stylesheet" href="~/css/style.css" media="all"/>
-    <script src="~/js/script.js"></script>
+    <link rel="stylesheet" href="~/css/index.css" media="all"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -18,7 +18,7 @@
 <div class="sprite-container">
     <img src="~/images/sprite.png" alt="My sprite" class="sprite">
 </div>
-<div class="site-title">
+<div class="site-title, wrapper">
     <partial name="Header"/>
     @RenderBody()
     <partial name="Footer"/>
